# Fenrir

./: .gitignore  .lsp.json  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DELIVERY-SKILLSET.md  GETTING-STARTED.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  branch-protection.tf  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  delivery-trace.yml
agents/: architect.md  azure-architect.md  azure-deploy-verifier.md  azure-sre.md  coder.md  context-engineering.md  dat-architect.md  delivery-tracker.md  doc-keeper.md  qa-tester.md  red-team-destroyer.md  reviewer.md  security-guardrail.md  stack-adapter.md
commands/: auto.md  challenge-me.md  dashboard.md  deliver.md  init.md  plan.md  ship.md  status.md
dashboard/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
dashboard/backend/: __init__.py  app.py  board.py  catalog.py  cli.py  config.py  models.py  pricing.py  telemetry.py
dashboard/data/: board.json
dashboard/data/boards/: -Users-kdesantiago-Desktop-Fenrir.json
dashboard/frontend/: app.js  index.html  styles.css
dashboard/tests/: test_attribution.py  test_audit_thin.py  test_board.py  test_catalog.py  test_cost_accounting.py  test_cross_platform_hooks.py  test_flow_metrics.py  test_migrate_tracking_hooks.py  test_per_project_board.py  test_pricing.py  test_project_dir_resolution.py  test_retro.py  test_scope_cli.py  test_slug_resolution.py  test_telemetry.py  test_trace.py
dashboard/tests/e2e/: fixture-board.json  smoke.spec.js
docs/adr/: 0001-multi-agent-cost-efficiency.md  0002-specialized-coder-roster.md  0003-cross-platform-tracking-and-auto-registered-hooks.md  0003-dashboard-ux-frontend.md  0004-cross-os-python-hook-launcher.md  0005-init-module-layout.md  0006-specialist-auto-router.md  0007-dashboard-ux-frontend.md
docs/delivery-memory/: lessons.md
docs/specs/: challenge-me-violent.md  cost-fidelity.md  cross-platform-tracking-auto-hooks.md  dashboard-easy-deploy.md  dashboard-ux-evolve.md  epic-9-techlead-ai-architect.md  package-quality-hardening.md  specialist-coders-roster.md  specialist-coders-tranche1.md  techlead-status-report.md  us-cost-accounting.md
hooks/: branch-plan-check.py  config-audit.py  content-scanner.py  delivery-guard.py  doc-staleness.py  hooks.json  iac-watch.py  precompact-focus.py  prompt-guard.py  run-python.sh  session-context.py  session-end.py  tool-failure-triage.py  tracking-attribute.py  tracking-collect.py  tracking-finalize.py  tracking-guard.py  tracking-open.py
hooks/tests/: test_branch_plan_check.py  test_compaction.py  test_config_audit.py  test_content_scanner.py  test_delivery_guard.py  test_doc_staleness.py  test_iac_watch.py  test_prompt_guard.py  test_session_context.py  test_session_end.py  test_techlead_report.py  test_tool_failure_triage.py  test_tracking.py
monitors/: aks-deploy-watch.sh  monitors.json
scripts/: bootstrap-detect-python.py  bootstrap-smoke-test.sh  bootstrap.py  bootstrap_smoke_test.py  dashboard.py  migrate-tracking-hooks.py  set_branch_protection.py  techlead_report.py  track_session.py
skills/ai-threat-model/: SKILL.md  VERIFY.md
skills/alert-delivery/: SKILL.md  VERIFY.md
skills/api-first/: SKILL.md  VERIFY.md
skills/app-config/: SKILL.md  VERIFY.md
skills/auth-gen/: SKILL.md  VERIFY.md
skills/azure-audit/: SKILL.md  VERIFY.md
skills/azure-cost/: SKILL.md  VERIFY.md
skills/azure-monitor-ops/: SKILL.md  VERIFY.md
skills/azure-waf/: SKILL.md  VERIFY.md
skills/caching/: SKILL.md  VERIFY.md
skills/cli/: SKILL.md  VERIFY.md
skills/concurrency/: SKILL.md  VERIFY.md
skills/cronjob/: SKILL.md  VERIFY.md
skills/data-model/: SKILL.md  VERIFY.md
skills/db-migration/: SKILL.md  VERIFY.md
skills/delivery-gates/: SKILL.md  VERIFY.md
skills/doc-generator/: SKILL.md  VERIFY.md
skills/domain-services/: SKILL.md  VERIFY.md
skills/dto-schemas/: SKILL.md  VERIFY.md
skills/error-budget/: SKILL.md  VERIFY.md
skills/event-driven/: SKILL.md  VERIFY.md
skills/explain/: SKILL.md  VERIFY.md
skills/feature-flags/: SKILL.md  VERIFY.md
skills/file-storage/: SKILL.md  VERIFY.md
skills/frontend-gen/: SKILL.md  VERIFY.md
skills/gitops/: SKILL.md  VERIFY.md
skills/iac-gen/: SKILL.md  VERIFY.md
skills/image-scan/: SKILL.md  VERIFY.md
skills/incident-runbook/: SKILL.md  VERIFY.md
skills/integration-client/: SKILL.md  VERIFY.md
skills/knowledge-base/: SKILL.md  VERIFY.md
skills/langgraph-workflow/: SKILL.md  VERIFY.md
skills/llm-cost-monitor/: SKILL.md  VERIFY.md
skills/llm-gen/: SKILL.md  VERIFY.md
skills/load-test/: SKILL.md  VERIFY.md
skills/memory-keeper/: SKILL.md  VERIFY.md
skills/observability-gen/: SKILL.md  VERIFY.md
skills/online-llm-eval/: SKILL.md  VERIFY.md
templates/: .pre-commit-config.yaml  .semgrep.yml  CODEOWNERS  azure-branch-policy.tf  branch-protection.tf  optional-hooks.json  org-profile.yaml  renovate.json  stack-interface.yaml  team-settings.json
templates/uv-workspace/: .gitignore  README.md  pyproject.toml
templates/uv-workspace/src/example_service/: pyproject.toml
templates/uv-workspace/src/example_service/example_service/: __init__.py
templates/uv-workspace/src/example_service/tests/: test_smoke.py
templates/uv-workspace/src/{{MODULE}}/: .env.example  README.md  __init__.py  main.py  pyproject.toml
templates/uv-workspace/src/{{MODULE}}/api/: __init__.py  routes.py
templates/uv-workspace/src/{{MODULE}}/core/: __init__.py  config.py  settings.py
templates/uv-workspace/src/{{MODULE}}/schemas/: __init__.py
templates/uv-workspace/src/{{MODULE}}/services/: __init__.py
templates/uv-workspace/src/{{MODULE}}/tests/: test_smoke.py
(+43 files in other folders)
