# Fenrir Dashboard — companion monitoring app (NOT a plugin component).
# Local web app: parses ~/.claude telemetry (tokens/cost/agents) + an Agile board
# (Epic→Feature→User Story→Task) the agents drive via the CLI. Own deps, own CI job.
[project]
name = "fenrir-dashboard"
version = "0.1.0"
description = "Local monitoring dashboard for Fenrir: agent/token/cost telemetry + an agent-driven Agile board."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "B", "C4", "I", "UP"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["backend"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
