# Workspace MEMBER — one shippable service. Copy this dir per service (rename to your service).
[project]
name = "example-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = []   # runtime deps for THIS service only (e.g. fastapi, uvicorn)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_service"]
